<resources>
    <string name="app_name">Personal Notes</string>
    <string name="tab_notes">Notes</string>
    <string name="tab_categories">Categories</string>
    <string name="tab_settings">Settings</string>
    <string name="fab_add_note">Add note</string>

    <string name="hint_search">Search notes</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_cancel">Cancel</string>
    <string name="label_title">Title</string>
    <string name="label_content">Content</string>
    <string name="label_category">Category</string>
    <string name="label_tags">Tags (comma separated)</string>
    <string name="label_login">Login</string>
    <string name="label_logout">Logout</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
</resources>
